Test perm size